--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link  rel="stylesheet" href="assets/css/bootstrap/bootstrap.css">
 </head>
-<body>
+<body class="container">
   <app-root></app-root>
 </body>
+<script src="assets/js/stomp.js"></script>
+<script src="assets/js/bootstrap/bootstrap.min.js"></script>
+
 </html>
